# nsigii_sparse_framework

./: BiPolar _Biparite_Parity_Morse_Command_Control_XORORDERAndChosEncoding_07FEB2026 (1).txt  LICENSE.md  NSIGII - Neurodiverse Sovereign Integrated Governance & Instruction Interface.json  README.md
NSIGII_EZE_Lite/: build.sh  nsigii_dimensional.c  nsigii_minimal.c
NSIGII_FUZZ/: NSIGGIProtocolTechnicalandApplicationAnalysis.html
NSIGII_MAIN/References/: NSIGGI Protocol_ Technical and Application Analysis.odt
NSIGII_RIFT_Family/riftfiles/: TODO.txt
NSIGI_TARGET_PROTOCOL/: README.md  TODO  module.go  nsigii-rift-1.0-1.rockspec  nsigii_core.h  nsigii_rift.h  pyproject.toml
